# fishnet

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  fishnet.toml
.github/workflows/: docker-publish.yml  homebrew-formula.yml  release.yml
contracts/: README.md  foundry.toml
contracts/deployments/: arbitrum-sepolia.json  base-mainnet.json  base-sepolia.json
contracts/script/: Deploy.s.sol
contracts/src/: FishnetWallet.sol
contracts/test/: AttackSurface.t.sol  EIP712Compatibility.t.sol  FishnetWallet.t.sol  FishnetWalletE2E.t.sol  FishnetWalletFuzz.t.sol  RustSignerFFI.t.sol
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/server/: Cargo.toml
crates/server/src/: alert.rs  anomaly.rs  auth.rs  config.rs  constants.rs  dashboard.rs  lib.rs  llm_guard.rs  middleware.rs  onchain.rs  password.rs  proxy.rs  rate_limit.rs  seed.rs  session.rs  signer.rs  spend.rs  state.rs  system.rs  vault.rs  watch.rs  webhook.rs
crates/server/src/audit/: merkle.rs  mod.rs
crates/types/: Cargo.toml
crates/types/src/: auth.rs  config.rs
dashboard/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
dashboard/src/: App.tsx  index.css
dashboard/src/api/: client.ts  mock.ts  types.ts
dashboard/src/api/endpoints/: activity.ts  alerts.ts  auth.ts  credentials.ts  exchange-config.ts  onchain.ts  proofs.ts  settings.ts  spend-analytics.ts  spend.ts  status.ts
dashboard/src/components/: CommandPalette.tsx
dashboard/src/components/auth/: ProtectedRoute.tsx  PublicRoute.tsx
dashboard/src/components/layout/: Shell.tsx  Sidebar.tsx
dashboard/src/components/ui/: Card.tsx  EmptyState.tsx  FilterPill.tsx  ServiceDot.tsx  Skeleton.tsx  StatCard.tsx  Toggle.tsx
dashboard/src/context/: alerts-context.tsx  toast-context.tsx
dashboard/src/hooks/: use-alerts.ts  use-auth.ts  use-credentials.ts  use-exchange-config.ts  use-fetch.ts  use-first-run.ts  use-proof-generation.ts  use-theme.ts
dashboard/src/lib/: constants.ts  format.ts
dashboard/src/pages/alerts/: AlertConfigPanel.tsx  AlertFilters.tsx  AlertRow.tsx  AlertsPage.tsx  WebhookConfigCard.tsx
dashboard/src/pages/credentials/: AddCredentialModal.tsx  CredentialRow.tsx  CredentialsPage.tsx
dashboard/src/pages/dashboard/: AlertBanner.tsx  CopyConfigCard.tsx  DashboardPage.tsx  MetricCards.tsx  QuickActions.tsx  RecentActivityTable.tsx  SpendByService.tsx  StatusCard.tsx  WarningBanners.tsx
dashboard/src/pages/docs/: DocsLayout.tsx  GettingStarted.tsx  OpenClawGuide.tsx  PolicyReference.tsx  SecurityModel.tsx
dashboard/src/pages/exchange-config/: AddExchangeModal.tsx  EndpointRow.tsx  ExchangeCard.tsx  ExchangeConfigPage.tsx  VolumeProgressBar.tsx
dashboard/src/pages/landing/: ArchitectureDiagram.tsx  LandingPage.tsx
dashboard/src/pages/login/: LoginPage.tsx
dashboard/src/pages/onchain/: OnchainPage.tsx  OnchainStats.tsx  PermitFilters.tsx  PermitHistoryTable.tsx  PermitRow.tsx  PolicyLimitsSummary.tsx  SignerStatusCard.tsx  WhitelistEditor.tsx  WhitelistRow.tsx
dashboard/src/pages/settings/: DangerZoneCard.tsx  NetworkIsolationCard.tsx  PasswordChangeCard.tsx  SettingsPage.tsx  SignerModeCard.tsx  VaultBackupRestoreCard.tsx
dashboard/src/pages/spend/: BudgetGauges.tsx  PeriodSelector.tsx  SpendBarChart.tsx  SpendPage.tsx  SpendTooltip.tsx  SpendTrendLine.tsx
dashboard/src/pages/wizard/: SetupWizard.tsx  WizardProgress.tsx
dashboard/src/pages/wizard/steps/: CredentialStep.tsx  PolicyStep.tsx
dashboard/src/pages/zk-proofs/: ProofGenerateForm.tsx  ProofHistoryTable.tsx  ProofProgressCard.tsx  ProofStatusCard.tsx  ZkProofsPage.tsx
docs/: DESIGN_SYSTEM.md  mockups.html
docs/postman/: postman_collection.json
scripts/: generate-homebrew-formula.sh  install.sh
