[workspace]
resolver = "2"
members = [
    "crates/cli",
    "crates/server",
    "crates/types",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
sha2 = "0.10"
rand = "0.9"
subtle = "2"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
dirs = "6"
toml = "0.8"
notify = "7"
rust-embed = "8"
mime_guess = "2"
sha3 = "0.10"
reqwest = { version = "0.12", features = ["json", "stream"] }
