[workspace]
resolver = "2"
members = [
    "crates/cli",
    "crates/server",
    "crates/types",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
sha2 = "0.10"
rand = "0.9"
subtle = "2"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
dirs = "6"
toml = "0.8"
notify = "7"
rust-embed = "8"
mime_guess = "2"
sha3 = "0.10"
reqwest = { version = "0.12", features = ["json", "stream"] }
rusqlite = { version = "0.32", features = ["bundled"] }
k256 = { version = "0.13", features = ["ecdsa"] }
alloy-primitives = "0.8"
hex = "0.4"
async-trait = "0.1"
argon2 = "0.5"
libsodium-sys = "0.2.7"
uuid = { version = "1", features = ["v4"] }
zeroize = "1"
libc = "0.2"
hmac = "0.12"
url = "2"
rust_decimal = "1"
