[package]
name = "fishnet-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "fishnet"
path = "src/main.rs"

[features]
dev-seed = ["fishnet-server/dev-seed"]

[dependencies]
fishnet-server = { path = "../server" }
fishnet-types = { path = "../types" }
tokio.workspace = true
axum.workspace = true
reqwest.workspace = true
