[package]
name = "fishnet-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "fishnet"
path = "src/main.rs"

[features]
dev-seed = ["fishnet-server/dev-seed"]

[dependencies]
fishnet-server = { path = "../server" }
fishnet-types = { path = "../types" }
tokio.workspace = true
axum.workspace = true
reqwest.workspace = true
hex.workspace = true
zeroize.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
clap = { version = "4.5", features = ["derive"] }
libc.workspace = true
dirs.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3"
