[package]
name = "fishnet-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
embed-dashboard = ["dep:rust-embed", "dep:mime_guess"]
dev-seed = []

[dependencies]
fishnet-types = { path = "../types" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream = "0.1"
axum.workspace = true
tower-http.workspace = true
sha2.workspace = true
rand.workspace = true
subtle.workspace = true
chrono.workspace = true
thiserror.workspace = true
dirs.workspace = true
toml.workspace = true
notify.workspace = true
sha3.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
k256.workspace = true
alloy-primitives.workspace = true
hex.workspace = true
async-trait.workspace = true
argon2.workspace = true
libsodium-sys.workspace = true
uuid.workspace = true
zeroize.workspace = true
libc.workspace = true
hmac.workspace = true
url.workspace = true
rust_decimal.workspace = true
tiny-keccak.workspace = true
rust-embed = { workspace = true, optional = true }
mime_guess = { workspace = true, optional = true }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
tempfile = "3"
static_assertions = "1"
